# cockpit

./: .gitignore  .goreleaser.yaml  README.md  embed.go  go.mod  go.sum  install.ps1  install.sh  inventory.example.yaml  pyproject.toml
.github/workflows/: ci.yml
agent/: go.mod  main.go  main_test.go
agent/deploy/: cockpit-agent.plist  cockpit-agent.service  config.example.json
cmd/cockpit/: agentcmd.go  doctor.go  doctor_test.go  integration_test.go  main.go  serve.go  servicecmd.go  servicecmd_test.go  setup.go  setup_test.go  stubs.go  upgrade.go
cockpit/: collector.py  config.py  db.py  inventory.py  jobs.py  main.py  models.py  runner.py  scheduler.py  schema.sql  translate.py  version_parse.py
cockpit/sources/: __init__.py  brew.py  claude_plugin.py  custom.py  github.py  npm.py  pypi.py
cockpit/web/: agent.py  app.py
cockpit_frontend/: api-contract.md  api-data.js  app.js  groups.js  index.html  machine.html  manage.html  manage.js  mock-data.js  package.json  store.js  topo-data.js  topo-state.js  topo-state.test.js  topo.js  topology.html  trends-data.js  trends.js
docs/: api-contract.md  deploy.md  frontend-brief.md
tests/: test_agent_api.py  test_collector.py  test_collector_split.py  test_config_scheduler.py  test_db.py  test_db_agent.py  test_inventory.py  test_inventory_agent.py  test_inventory_api.py  test_jobs.py  test_jobs_queue.py  test_main_smoke.py  test_models.py  test_runner.py  test_smoke.py  test_sources.py  test_sources_more.py  test_sse.py  test_translate.py  test_version_parse.py  test_web.py  test_web_abort_check.py
(+108 files in other folders)
