[project]
name = "cockpit"
version = "0.1.0"
description = "Homelab software version tracker (subsystem 2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "paramiko>=3.4",
    "pyyaml>=6.0",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "anyio>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
